Update CharacterDatabaseTest.java
getFirst() removed both